UX 1. Add a spinner to show before data parsing completes. 2. Remove reverse scrollbar; fix table height.

--- a/src/app/gtm-config-generator/components/xlsx-sidenav-form/xlsx-sidenav-form.component.scss
+++ b/src/app/gtm-config-generator/components/xlsx-sidenav-form/xlsx-sidenav-form.component.scss
@@ -13,6 +13,14 @@
     }
   }
 
+  &__spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+  }
+
   &__header {
     display: flex;
     justify-content: space-between;
